src/main/java添加了个common包,src/main/res添加了配置文件